# mat_mul

./: CMakeLists.txt  README.md  bot.cpp  build.bat  walkthrough.md
benchmark/: benchmark_harness.cpp
docs/: Report.md  Report.tex
include/: matrix_utils.h
src/: loop_reorder.cpp  naive.cpp  optimized_sgemm.cpp  parallel_omp.cpp  parallel_threads.cpp  simd.cpp  strassen.cpp  tiled.cpp
